[tool.poetry]
name = "date-night-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
langchain-core = "^0.3.19"
langgraph = "^0.2.52"
langchain-openai = "^0.2.9"
langgraph-checkpoint-sqlite = "^2.0.1"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
