[tool.poetry]
name = "date-night-api"
version = "0.1.0"
description = ""
authors = ["Rahul Verma <verma.x.rahul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
langchain-core = "^0.3.19"
langgraph = "^0.2.52"
langchain-openai = "^0.2.9"
langgraph-checkpoint-sqlite = "^2.0.1"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
